[package]
name = "randrust"
version = "0.1.4"
authors = ["Ryan Gerstenkorn <ryan_gerstenkorn@fastmail.fm>"]
edition = "2018"
description = "Lite HTTP server that returns base64 encoded bytes of a given length"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.35"
futures = "0.1.29"
rand = "0.7.2"
base64 = "0.10.1"


[package.metadata.deb]
maintainer-scripts="debian"
assets = [
            ["debian/randrust.service", "/lib/systemd/system/randrust.service", "644"]
         ]
