[package]
name = "randrust"
version = "0.1.1"
authors = ["Ryan Gerstenkorn <ryan_gerstenkorn@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.35"
futures = "0.1.29"
rand = "0.7.2"
base64 = "0.10.1"


[package.metadata.deb]
maintainer-scripts="debian"
assets = [
            ["debian/randrust.service", "/lib/systemd/system/randrust.service", "644"]
         ]
