[package]
name = "randrust"
version = "0.1.17"
authors = ["Ryan Gerstenkorn <ryan_gerstenkorn@fastmail.fm>"]
edition = "2018"
description = "Lite HTTP server that returns base64 encoded bytes of a given length"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.35"
futures = "0.1.29"
rand = "0.7.2"
base64 = "0.10.1"


[package.metadata.deb]
section = "httpd"
depends = "libgcc1 (>= 1:4.0.0), libc6 (>= 2.00)"
maintainer-scripts="debian/control"
conf-files = ["/etc/default/randrust"]
assets = [
            ["target/release/randrust", "usr/local/bin/randrust", "755"],
            ["debian/init.d", "etc/init.d/randrust", "755"],
            ["debian/default", "etc/default/randrust", "644"],
            ["debian/apparmor", "etc/apparmor.d/usr.local.bin.randrust", "644"]
         ]
